--- a/.gitignore
+++ b/.gitignore
@@ -46,10 +46,17 @@ modules.builtin
 /Module.symvers
 
 #
+# Debian directory (make deb-pkg)
+#
+/debian/
+
+#
 # git files that we don't want to ignore even it they are dot-files
 #
 !.gitignore
 !.mailmap
+!.config
+!.config.old
 
 #
 # Generated include files
