--- a/arch/arm/mach-s3c64xx/Kconfig
+++ b/arch/arm/mach-s3c64xx/Kconfig
@@ -113,6 +113,21 @@ config MACH_MINI6410
 	help
 	  Machine support for the FriendlyARM MINI6410
 
+config MACH_OK6410
+	bool "OK6410"
+	select CPU_S3C6410
+	select S3C_DEV_HSMMC
+	select S3C_DEV_HSMMC1
+	select S3C64XX_SETUP_SDHCI
+	select S3C_DEV_USB_HOST
+	select S3C_DEV_NAND
+	select S3C_DEV_FB
+	select S3C64XX_SETUP_FB_24BPP
+	select SAMSUNG_DEV_ADC
+	select SAMSUNG_DEV_TS
+	help
+	  Machine support for the Forlinx OK6410-A
+
 config MACH_REAL6410
 	bool "REAL6410"
 	select CPU_S3C6410
